fixed controls spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -269,9 +269,8 @@ form {
 
 @media (max-width: 1240px){
   .controls {
-    flex-direction: column;
     align-items: center;
-    gap: 20px; 
+    gap: 300px; 
   }
 
   .gen-tools {
@@ -297,6 +296,11 @@ form {
 
   .or{
     font-size:2.5rem;
+  }
+
+  .controls{
+    flex-direction: column;
+    gap:0;
   }
 }
 
